--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>Youtube Custom Player</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="style/style.css"></script>
     <link rel="stylesheet" href="style/font-awesome/css/font-awesome.min.css"></script>
   </head>
   <body>
-    <div id="root"></div>
+    <div class="container">
+      <div id="root"></div>
+    </div>
     <script src="bundle.js"></script>
   </body>
 </html>
